--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -17,5 +17,6 @@
   ],
   "diagnostic.errorSign": "•",
   "diagnostic.warningSign": "•",
-  "diagnostic.infoSign": "•"
+  "diagnostic.infoSign": "•",
+  "clangd.arguments": ["--header-insertion=never"]
 }
